--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fideloper/proxy": "^4.0",
         "hieu-le/active": "~3.5",
         "intervention/image": "^2.4",
+        "jacobcyl/ali-oss-storage": "^2.1",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "mews/captcha": "~2.0",
