--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,13 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
+FILESYSTEM_DRIVER=oss
+oss_access_id=accessid
+oss_access_key=key
+oss_bucket=name
+oss_endpoint=oss-cn-hangzhou.aliyuncs.com
+oss_cdnDomain=https://thitxdd.oss-cn-hangzhou.aliyuncs.com/
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
@@ -23,12 +30,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_DRIVER=log
+MAIL_HOST=smtp.163.com
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=
+MAIL_FROM_ADDRESS=
+MAIL_FROM_NAME=湖南晌当当九牧管业有限公司
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
