--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+//SEO 友好的 URL 百度翻译 汉字转拼音解决方案
+BAIDU_TRANSLATE_APPID=201703xxxxxxxxxxxxx
+BAIDU_TRANSLATE_KEY=q0s6axxxxxxxxxxxxxxxxx
