--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,15 @@
         "php": "^7.1.3",
         "encore/laravel-admin": "1.6.8",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "~6.3",
         "hieu-le/active": "~3.5",
         "intervention/image": "^2.4",
         "jacobcyl/ali-oss-storage": "^2.1",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "mews/captcha": "~2.0",
-        "overtrue/laravel-lang": "~3.0"
+        "overtrue/laravel-lang": "~3.0",
+        "overtrue/pinyin": "~3.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "~3.2",
