百度翻译 拼音转议 引入队列机制-  邮件通知站长

--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,7 @@ MAIL_PASSWORD=
 MAIL_ENCRYPTION=
 MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME=湖南晌当当九牧管业有限公司
+MAIL_Notifications=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
