--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,12 @@
         "intervention/image": "^2.4",
         "jacobcyl/ali-oss-storage": "^2.1",
         "laravel/framework": "5.7.*",
+        "laravel/horizon": "~1.3",
         "laravel/tinker": "^1.0",
         "mews/captcha": "~2.0",
         "overtrue/laravel-lang": "~3.0",
-        "overtrue/pinyin": "~3.0"
+        "overtrue/pinyin": "~3.0",
+        "predis/predis": "~1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "~3.2",
